<resources>
    <string name="app_name">WhatsApp</string>

    <string name="tabChat">CHAT</string>
    <string name="tabStatus">STATO</string>
    <string name="tabCalls">CHIAMATE</string>
    <string name="new_group">Nuovo gruppo</string>
    <string name="new_broadcast">Nuovo broadcast</string>
    <string name="whatsapp_web">Whatsapp Web</string>
    <string name="starred_messages">Messaggi importanti</string>
    <string name="settings">Impostazioni</string>
    <string name="foto">Foto</string>
    <string name="video">Video</string>
    <string name="link">Link</string>
    <string name="gif">GIF</string>
    <string name="audio">Audio</string>
    <string name="documenti">Documenti</string>
    <string name="cerca">Cerca...</string>
    <string name="titolo_cerca">Cerca</string>
    <string name="invite_friend">Invita un amico</string>
    <string name="contacts">Contatti</string>
    <string name="update">Aggiorna</string>
    <string name="help">Aiuto</string>
    <string name="select">Seleziona</string>
    <string name="new_contact">Nuovo contatto</string>
    <string name="add_participants">Aggiungi partecipanti</string>
    <string name="qr_code_title">Codice QR</string>
    <string name="reset_qr_code">Reimposta codice QR</string>
    <string name="share">Condividi</string>
    <string name="my_code">IL MIO CODICE</string>
    <string name="frame_code">INQUADRA CODICE</string>
    <string name="new_group_call">Nuova chiamata di gruppo</string>
    <string name="pin_chat">"Fissa chat "</string>
    <string name="deactivate_notifications">Disattiva notifiche</string>
    <string name="delete_chat">Elimina chat</string>
    <string name="archive_chat">Archivia chat</string>
    <string name="options">Opzioni</string>
    <string name="create_direct_connection">Crea collegamento diretto</string>
    <string name="show_contact">Mostra contatto</string>
    <string name="mark_as_to_read">Segna come da leggere</string>
    <string name="select_all">Seleziona tutte</string>
    <string name="remove_from_call_log">Rimuovi dal registro chiamate</string>
    <string name="uppercase_new_broadcast">NUOVO BROADCAST</string>
    <string name="uppercase_new_group">NUOVO GRUPPO</string>
    <string name="call_info">Info chiamata</string>
    <string name="new_chat">Nuova chat</string>
    <string name="block">Blocca</string>
    <string name="incoming">In arrivo</string>
    <string name="lost">Persa</string>
    <string name="outgoing">In uscita</string>
    <string name="status_privacy">Privacy dello stato</string>
    <string name="delete_call_log">Cancella registro chiamate</string>
    <string name="archived">Archiviate</string>
    <string name="archived_chats">Chat archiviate</string>
    <string name="feminine_archived">Archiviata</string>
    <string name="yesterday">Ieri</string>
    <string name="extract_from_archive">Estrai chat dall\'archivio</string>
    <string name="abandon_group">Abbandona gruppo</string>
    <string name="group_info">Info gruppo</string>
    <string name="today">Oggi</string>
    <string name="no_answer">Senza risposta</string>
</resources>