<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/pin_chat"
        app:showAsAction="always"
        android:icon="@drawable/ic_pin"
       />

    <item
        android:title="@string/delete_chat"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete"
      />

    <item
        android:title="@string/deactivate_notifications"
        app:showAsAction="always"
        android:icon="@drawable/ic_deactivate_notifications"
        />

    <item
        android:title="@string/archive_chat"
        app:showAsAction="always"
        android:icon="@drawable/ic_archive"
        android:onClick="onArchiveButtonClick"
         />

    <item
        android:title="@string/create_direct_connection"
        app:showAsAction="never" />

    <item
        android:title="@string/show_contact"
        app:showAsAction="never" />

    <item
        android:title="@string/mark_as_to_read"
        app:showAsAction="never" />

    <item
        android:title="@string/select_all"
        android:id="@+id/chatSelectAll"
        app:showAsAction="never" />

</menu>