<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/delete_chat"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete"
        />

    <item
        android:title="@string/deactivate_notifications"
        app:showAsAction="always"
        android:icon="@drawable/ic_deactivate_notifications"
        />

    <item
        android:title="@string/extract_from_archive"
        android:icon="@drawable/ic_unarchive"
        app:showAsAction="always"
        android:onClick="onUnarchiveButtonClick"/>

    <item
        android:title="@string/create_direct_connection"
        android:id="@+id/archivedCreateConnection"
        app:showAsAction="never" />

    <item
        android:title="@string/show_contact"
        android:id="@+id/archivedShowContact"
        app:showAsAction="never" />

    <item
        android:title="@string/mark_as_to_read"
        android:id="@+id/archivedToRead"
        app:showAsAction="never" />

    <item
        android:title="@string/select_all"
        android:id="@+id/archivedSelectAll"
        app:showAsAction="never" />
</menu>