<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/newmessage_contact_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/titolo_cerca"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/newmessage_invite_friend"
        android:title="@string/invite_friend"
        app:showAsAction="never" />

    <item
        android:id="@+id/newmessage_contacts"
        android:title="@string/contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/newmessage_update"
        android:title="@string/update"
        app:showAsAction="never" />

    <item
        android:id="@+id/newmessage_help"
        android:title="@string/help"
        app:showAsAction="never" />

</menu>