<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/archivedNewGroup"
        android:orderInCategory="1"
        android:title="@string/new_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/archivedNewBroadcast"
        android:orderInCategory="2"
        android:title="@string/new_broadcast"
        app:showAsAction="never" />

    <item
        android:id="@+id/archivedWhatsAppWeb"
        android:orderInCategory="3"
        android:title="@string/whatsapp_web"
        app:showAsAction="never" />

    <item
        android:id="@+id/archivedStarredMessages"
        android:orderInCategory="4"
        android:title="@string/starred_messages"
        app:showAsAction="never" />
</menu>