<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_filter_button"
        android:title=""
        app:actionLayout="@layout/search_filter_button"
        app:showAsAction="always"
        android:visible="false" />

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_vector_24"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_new_group"
        android:orderInCategory="1"
        android:title="@string/new_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/app_bar_new_broadcast"
        android:orderInCategory="2"
        android:title="@string/new_broadcast"
        app:showAsAction="never" />

    <item
        android:id="@+id/app_bar_whatsapp_web"
        android:orderInCategory="3"
        android:title="@string/whatsapp_web"
        app:showAsAction="never" />

    <item
        android:id="@+id/app_bar_starred_messages"
        android:orderInCategory="4"
        android:title="@string/important_messages"
        app:showAsAction="never" />

    <item
        android:id="@+id/app_bar_settings"
        android:orderInCategory="5"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>